<resources>
    <string name="app_name">Masro2a App</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_report">Add new report</string>
    <string name="action_done">Done</string>
    <string name="add_car_image">Add car image</string>
    <string name="empty_string">""</string>


    <string name="car_make">Car Make*</string>
    <string name="alfa_romeo">Alfa Romeo</string>
    <string name="audi">Audi</string>
    <string name="bmw">BMW</string>
    <string name="byd">BYD</string>
    <string name="brilliance">Brilliance</string>
    <string name="changan">Changan</string>
    <string name="chery">Chery</string>
    <string name="chevrolet">Chevrolet</string>
    <string name="chrysler">Chrysler</string>
    <string name="citroen">Citroen</string>
    <string name="daewoo">Daewoo</string>
    <string name="daihatsu">Daihatsu</string>
    <string name="dodge">Dodge</string>
    <string name="fiat">Fiat</string>
    <string name="ford">Ford</string>
    <string name="geely">Geely</string>
    <string name="honda">Honda</string>
    <string name="hummer">Hummer</string>
    <string name="hyundai">Hyundai</string>
    <string name="isuzu">Isuzu</string>
    <string name="jac">Jac</string>
    <string name="jaguar">Jaguar</string>
    <string name="jeep">Jeep</string>
    <string name="kia">Kia</string>
    <string name="lada">Lada</string>
    <string name="lancia">Lancia</string>
    <string name="land_rover">Land Rover</string>
    <string name="mg">MG</string>
    <string name="mini">Mini</string>
    <string name="mazda">Mazda</string>
    <string name="mercedes">Mercedes-Benz</string>
    <string name="mitsubishi">Mitsubishi</string>
    <string name="nissan">Nissan</string>
    <string name="opel">Opel</string>
    <string name="other_make">Other Make</string>
    <string name="peugeot">Peugeot</string>
    <string name="porsche">Porsche</string>
    <string name="proton">Proton</string>
    <string name="renault">Renault</string>
    <string name="saipa">Saipa</string>
    <string name="seat">Seat</string>
    <string name="senova">Senova</string>
    <string name="skoda">Skoda</string>
    <string name="speranza">Speranza</string>
    <string name="ssang_yong">Ssang Yong</string>
    <string name="subaru">Subaru</string>
    <string name="suzuki">Suzuki</string>
    <string name="toyota">Toyota</string>
    <string name="volkswagen">Volkswagen</string>
    <string name="volvo">Volvo</string>
    <string name="car_model">Car Model*</string>


    <string name="car_location"> <u>Click To Add Car Location* </u></string>
    <string name="notes">Notes</string>
    <string name="contact_info">Contact Info</string>
    <string name="select_car_make">You have to select car make</string>
    <string name="select_car_model">You have to select car model</string>
    <string name="select_car_location">You have to select car location</string>
    <string name="camera_permission">You have to accept this permission to add a photo</string>
    <string name="location_permission">You have to accept this permission to add the car\'s location</string>
    <string name="post_added">Post added successfully</string>
    <string name="car_make_list">Car Make</string>
    <string name="car_location_list">Car Location</string>
    <string name="car_model_list">Car Model</string>

    <string name="details_car_make">Car Make: %s</string>
    <string name="details_car_model">Car Model: %s</string>
    <string name="details_car_location">Car Location: %s</string>
    <string name="details_notes">Notes: %s</string>
    <string name="details_contact_info">Contact Info: %s</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="last_viewed">Last viewed car post</string>
    <string name="fab_description">Button used to add a new car report</string>

</resources>
