<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvPostContanier"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgCarPost"
            android:layout_width="@dimen/image_car_post_size"
            android:layout_height="@dimen/image_car_post_size"
            android:background="@drawable/car_placeholder"
            android:contentDescription="@string/empty_string"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imgCarPost"
            android:layout_alignTop="@+id/imgCarPost"
            android:layout_toEndOf="@+id/imgCarPost"
            android:layout_marginStart="@dimen/margin_medium"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtCarMake"
                style="@style/txtMediumBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/car_make_list" />

            <TextView
                android:id="@+id/txtCarModel"
                style="@style/txtMediumBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/car_model_list" />


            <TextView
                android:id="@+id/txtCarLocation"
                style="@style/txtMediumBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/car_location_list" />
        </LinearLayout>


    </RelativeLayout>

</android.support.v7.widget.CardView>

