<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/rlCarPostContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/lnrAddCarImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgCar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/car_image_max_height"
                    android:contentDescription="@string/empty_string"
                    android:scaleType="centerInside"
                    android:src="@drawable/car_placeholder" />

                <TextView
                    style="@style/txtMediumBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/add_car_image"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />
            </LinearLayout>


            <Spinner
                android:id="@+id/spCarMake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lnrAddCarImage"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:entries="@array/car_makes" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCarModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spCarMake"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etCarModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_model"
                    android:paddingStart="@dimen/padding_medium"
                    android:textSize="@dimen/font_medium" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txtCarLocation"
                style="@style/txtMediumBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilCarModel"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:ellipsize="end"
                android:gravity="center"
                android:padding="@dimen/padding_medium"
                android:text="@string/car_location"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtCarLocation"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes"
                    android:paddingStart="@dimen/padding_medium"
                    android:textSize="@dimen/font_medium" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilContactInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilNotes"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etContactInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_info"
                    android:paddingStart="@dimen/padding_medium"
                    android:textSize="@dimen/font_medium" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/carPostProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>